--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <servlet>
         <servlet-name>myspringmvc</servlet-name>
-        <servlet-class>com.wzt.spring.framework.webmvc.DispatchServlet</servlet-class>
+        <servlet-class>com.wzt.spring.framework.webmvc.servlet.DispatchServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>classpath:application.properties</param-value>
