--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 scanPackage=com.wzt.spring.framework.test
 templateRoot=layouts
+pointCut=public .* com\.wzt\.spring\.framework\.test\.service\..*Service\..*\(.*\)
+aspectBefore=com.wzt.spring.framework.aop.AopProxy before
+aspectAfter=com.wzt.spring.framework.aop.AopProxy after
